# broquest

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-package.yml
crates/broquest/: Cargo.toml
crates/broquest/resources/: AppIcon.icns  Info.plist  broquest.desktop  petstore-v3.1.json
crates/broquest/src/: app.rs  app_database.rs  app_events.rs  app_settings.rs  assets.rs  collection_editor.rs  collection_manager.rs  collection_types.rs  collections_panel.rs  editor_panel.rs  environment_editor.rs  environment_resolver.rs  form_editor.rs  group_editor.rs  header_editor.rs  http.rs  http_client.rs  icon.rs  main.rs  openapi_import.rs  path_parameter_editor.rs  query_parameter_editor.rs  request_editor.rs  result_ext.rs  script_completion.rs  script_editor.rs  script_engine.rs  themes_manager.rs  update_manager.rs
crates/broquest/src/collections/: collection_editor.rs  group_editor.rs  manager.rs  mod.rs  openapi.rs  panel.rs  types.rs  wsdl.rs
crates/broquest/src/domain/: auth.rs  http.rs  mod.rs  request.rs
crates/broquest/src/environments/: editor.rs  mod.rs  resolver.rs
crates/broquest/src/highlighting/: mod.rs
crates/broquest/src/http/: auth_tests.rs  client.rs  jwt.rs  mod.rs  oauth2.rs
crates/broquest/src/requests/: auth_editor.rs  editor.rs  editor_panel.rs  form_editor.rs  header_editor.rs  mod.rs  path_editor.rs  query_editor.rs
crates/broquest/src/scripting/: editor.rs  engine.rs  mod.rs  variable_store.rs
crates/broquest/src/settings/: mod.rs  view.rs
crates/broquest/src/ui/: actions.rs  draggable_tree.rs  icon.rs  mod.rs  tab_badge.rs  tree.rs
crates/gpui_tokio/: Cargo.toml  LICENSE
crates/gpui_tokio/src/: gpui_tokio.rs  lib.rs
crates/tree-sitter-url/: Cargo.toml  grammar.js  tree-sitter.json
crates/tree-sitter-url/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-url/queries/: highlights.scm
crates/tree-sitter-url/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-url/test/corpus/: basic.txt  complex-urls.txt  query-params.txt  variables.txt
crates/wsdl/: Cargo.toml
crates/wsdl/src/: lib.rs  soap.rs  types.rs  wsdl.rs  xsd.rs
crates/wsdl/tests/: eu_vat.rs
crates/wsdl/tests/fixtures/: VatRetrievalService.wsdl  VatRetrievalServiceMessage.xsd  VatRetrievalServiceType.xsd
script/: package-deb
themes/: catppuccin.json
