[workspace]
members = ["crates/broquest", "crates/gpui_tokio", "crates/tree-sitter-url"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2024"
authors = ["Andreas Johansson <z@zanmato.se>"]
license = "Apache-2.0"
homepage = "https://github.com/zanmato/broquest"
repository = "https://github.com/zanmato/broquest"
description = "Desktop API Client"

[workspace.dependencies]
# Core GPUI dependencies
gpui = { version = "0.2.2" }
gpui-macros = "0.2.2"
# longbridge/gpui-component
gpui-component = { git = "https://github.com/longbridge/gpui-component/", features = [
    "tree-sitter-languages",
] }
gpui-component-macros = { git = "https://github.com/longbridge/gpui-component/" }

# Database dependencies
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "sqlite",
    "chrono",
    "json",
] }

# Core dependencies
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
env_logger = "0.11"
chrono = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zed-reqwest = "0.12.15-zed"
async-std = { version = "1.13", features = ["attributes"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5"
toml = "0.8"
anyhow = "1.0"
tree-sitter-xml = { version = "0.7" }

# Script execution dependencies
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.10.0", features = [
    "parallel",
    "macro",
] }

# LLRT modules for buffer, crypto, and URL support
llrt_modules = { path = "vendor/llrt/llrt_modules", features = [
    "buffer",
    "crypto",
    "url",
] }

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.release]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
