[package]
name = "broquest"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui_tokio = { path = "../gpui_tokio" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
async-std = { workspace = true }
dirs = { workspace = true }
rust-embed = { workspace = true }

# Additional dependencies
env_logger = { workspace = true }

# HTTP client for AI chat
zed-reqwest = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1"
toml = { workspace = true }
thiserror = { workspace = true }

# Script execution dependencies
rquickjs = { workspace = true }
base64 = { workspace = true }

# URL parsing and highlighting
tree-sitter-url = { path = "../tree-sitter-url" }
