[package]
name = "broquest"
version = "0.1.8"
edition = "2024"

[dependencies]
# Workspace dependencies
gpui = { workspace = true }
gpui-component = { workspace = true }
lsp-types = { workspace = true }
ropey = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
smol = { workspace = true }
dirs = { workspace = true }
rust-embed = { workspace = true }

# Additional dependencies
env_logger = { workspace = true }

# HTTP client for AI chat
reqwest = { workspace = true }
async-compat = { workspace = true }
urlencoding = "2.1"
toml = { workspace = true }
thiserror = { workspace = true }

# Script execution dependencies
rquickjs = { workspace = true }

# LLRT modules for buffer, crypto, and URL support
llrt_modules = { workspace = true }

# URL parsing and highlighting
tree-sitter-url = { path = "../tree-sitter-url" }
tree-sitter-xml = { workspace = true }

# OpenAPI spec parsing
oas3 = { version = "0.20", features = ["yaml-spec"] }
jsonpath-rust = "1.0.4"
