[package]
name = "tree-sitter-url"
description = "Broquest URL grammar for tree-sitter"
version = "0.1.0"
authors = ["Andreas <z@zanmato.se>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "url"]
categories = ["parser-implementations", "parsing", "text-editors"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
